--- a/srcs/config/exemple.conf
+++ b/srcs/config/exemple.conf
@@ -20,7 +20,7 @@ server {
 
 	# Root Handler (Homepage)
 	location /{
-		root = www/html;
+		root = /www/html;
 		index = .html;
 		allowed_methods = GET POST DELETE;
 		autoindex = off; #Enables directory listing - We can turn this on and off as much as we want. (It shows the files in the directory)
@@ -29,20 +29,20 @@ server {
 
 	# CGI Handler
 	location /cgi-bin {
-		root = www;
+		root = /www;
 		allowed_methods = GET POST DELETE;
 		autoindex = off; # if it is on, it still forbidden access
 	}
 
 	location /images {
-		root = www/html;
+		root = /www/html;
 		index = index.html;
 		allowed_methods = GET;
 		autoindex = on; #Enables directory listing - We can turn this on and off as much as we want. (It shows the files in the directory)
 	}
 
 	location /signin {
-		root = www;
+		root = /www;
 		index = index.html;
 		allowed_methods = GET POST DELETE; #Only allows GET and POST methods.
 		autoindex = on; #Enables directory listing - We can turn this on and off as much as we want. (It shows the files in the directory)
@@ -65,7 +65,7 @@ server {
 	error_page 502 = /error_pages/502.html;
 
     location /{
-		root = www/root2;
+		root = /www/root2;
 		index = .html;
 		allowed_methods = GET POST DELETE;
 		autoindex = off; #Enables directory listing - We can turn this on and off as much as we want. (It shows the files in the directory)
