fix: fixed setter of Location and ServerConf class: just set the variables

--- a/srcs/config/exemple.conf
+++ b/srcs/config/exemple.conf
@@ -23,7 +23,7 @@ server {
 		root = /www/html;
 		index = .html;
 		allowed_methods = GET POST DELETE;
-		autoindex = off; #Enables directory listing - We can turn this on and off as much as we want. (It shows the files in the directory)
+		autoindex = on; #Enables directory listing - We can turn this on and off as much as we want. (It shows the files in the directory)
         # return = 301 https://www.youtube.com/watch?v=dQw4w9WgXcQ ; #301 is the HTTP status code for "Moved Permanently"
     }
 
